...
                                                <color key="textColor" name="YP White"/>
                                                <color key="highlightedColor" name="YP White"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1/10" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="500" translatesAutoresizingMaskIntoConstraints="NO" id="KsK-Kc-yNz" userLabel="Index Label">
                                                <rect key="frame" x="338" y="0.0" width="36" height="23.5"/>
                                                <color key="tintColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Index"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YP White"/>
                                                <color key="highlightedColor" name="YP White"/>
                                                <size key="shadowOffset" width="0.0" height="0.0"/>
                                            </label>
                                        </subviews>
...
                                    <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="c0L-DP-W1P">
                                        <rect key="frame" x="0.0" y="43.5" width="374" height="561"/>
                                        <subviews>
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="The Godfather" highlightedImage="The Godfather" translatesAutoresizingMaskIntoConstraints="NO" id="qTH-l5-WYH" userLabel="Preview Image">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="561"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Poster"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="qTH-l5-WYH" secondAttribute="height" multiplier="2:3" id="dq0-Se-qp0"/>
                                                </constraints>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="20"/>
...
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="GT4-T0-j0B">
                                        <rect key="frame" x="0.0" y="744" width="374" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="157" placeholderIntrinsicHeight="60" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ra7-cf-nUs" userLabel="No button">
                                                <rect key="frame" x="0.0" y="0.0" width="177" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="No"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="60" id="Lqz-oN-6dT"/>
                                                </constraints>
                                                <color key="tintColor" name="YP Black"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="Нет">
                                                    <backgroundConfiguration key="background">
                                                        <color key="backgroundColor" name="YP White"/>
                                                    </backgroundConfiguration>
                                                    <fontDescription key="titleFontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                </buttonConfiguration>
                                                <userDefinedRuntimeAttributes>
...
                                                <connections>
                                                    <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BtA-jJ-5Tc"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="157" placeholderIntrinsicHeight="60" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yP2-E9-Vry" userLabel="Yes button">
                                                <rect key="frame" x="197" y="0.0" width="177" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                                <color key="tintColor" name="YP Black"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="Да">
                                                    <backgroundConfiguration key="background">
                                                        <color key="backgroundColor" name="YP White"/>
                                                    </backgroundConfiguration>
...
