...
    func show(quiz result: QuizResultsViewModel) {
        let alert = UIAlertController(title: result.title, message: result.text, preferredStyle: .alert)
        let action = UIAlertAction(title: result.buttonText, style: .default) { [weak self] _ in
            self?.presenter.restartGame()
        }
        alert.addAction(action)
        alert.view.accessibilityIdentifier = "Game results"
        present(alert, animated: true)
    }
    func showNetworkError(message: String) {
        let alertController = UIAlertController(
            title: "Ошибка",
            message: message,
...
